Fix table not responsive

--- a/web/src/app/styles/app.css
+++ b/web/src/app/styles/app.css
@@ -376,10 +376,15 @@ input.app-inline-text-input:invalid {
 }
 
 /* Table ------------------------- */
+.app-table-container {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: auto;
+}
+
 .app-table {
   border-collapse: collapse;
   width: 100%;
-  overflow-x: auto;
 }
 
 .app-table th,
